--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -297,6 +297,93 @@ p {
 }
 
 .drivers {
-  height: 400vh;
-  background-color: red;
+  height: 900vh;
+
+  &-banner {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    z-index: 1;
+
+    &-img {
+      background-image: url("../assets/img/mugello.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      height: 100%;
+      transform: scale(1.1);
+    }
+    &-blur {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      backdrop-filter: blur(10px);
+      /* Optional: add a tint or fade */
+      background: rgba(0, 0, 0, 0.7);
+      // background: black;
+      // opacity: 1;
+      pointer-events: none;
+    }
+  }
+
+  &-list {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    perspective: 1000px;
+    padding: 7.5rem;
+    z-index: 2;
+    background-image: url("../assets/img/mugello.jpg");
+    background-repeat: no-repeat;
+    background-size: 115%;
+    background-position: center;
+    // transform: scale(1.1);
+
+    &-blur {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      backdrop-filter: blur(10px);
+      /* Optional: add a tint or fade */
+      background: rgba(0, 0, 0, 0.7);
+      // background: black;
+      // opacity: 1;
+      pointer-events: none;
+    }
+
+    h2 {
+      position: relative;
+      font-size: $text-xl;
+      font-family: $font-display;
+      text-align: center;
+      color: white;
+      z-index: 2;
+    }
+
+    &-row {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform-style: preserve-3d;
+      transform-origin: center center;
+      display: flex;
+      gap: 10rem;
+      // transform: translate(-50%, -50%) translateZ(0px); /* default center + no depth */
+      // transition: transform 0.5s ease;
+
+      img {
+        width: 400px;
+        box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16),
+          0 4px 6px rgba(0, 0, 0, 0.45);
+        border-radius: 40px;
+      }
+    }
+  }
 }
