--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -340,7 +340,7 @@ p {
     z-index: 2;
     background-image: url("../assets/img/mugello.jpg");
     background-repeat: no-repeat;
-    background-size: 115%;
+    background-size: cover;
     background-position: center;
     // transform: scale(1.1);
 
@@ -373,16 +373,103 @@ p {
       left: 50%;
       transform-style: preserve-3d;
       transform-origin: center center;
+      // width: 100%;
+      // margin: auto;
       display: flex;
+      justify-content: center;
       gap: 10rem;
       // transform: translate(-50%, -50%) translateZ(0px); /* default center + no depth */
       // transition: transform 0.5s ease;
 
-      img {
-        width: 400px;
-        box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16),
-          0 4px 6px rgba(0, 0, 0, 0.45);
+      &-item {
+        position: relative;
+        width: 26.25rem;
+        aspect-ratio: 2 / 3;
+        display: flex;
+        overflow: hidden;
         border-radius: 40px;
+        border: 0 solid transparent;
+        transition: border-width 0.6s ease, border-color 0.3s ease 0.3s;
+
+        &:hover {
+          border-width: 0.5vw;
+          border-color: black;
+          transition: border-width 0.6s ease, border-color 0.3s ease;
+
+          &.ducati {
+            border-color: #D10000;
+          }
+          &.gresini {
+            border-color: #B8C9F6;
+          }
+          &.aprilia {
+            border-color: #4B247D;
+          }
+          &.vr46 {
+            border-color: #DAFF0D;
+          }
+          &.ktm {
+            border-color: #FD5A27;
+          }
+          &.lcr-castrol {
+            border-color: #08A25E;
+          }
+          &.yamaha {
+            border-color: #212449;
+          }
+          &.tech3 {
+            border-color: #D24702;
+          }
+          &.trackhouse {
+            border-color: #0B6EB7;
+          }
+          &.pramac {
+            border-color: #7E47B4;
+          }
+          &.honda {
+            border-color: #ED0000;
+          }
+          &.lcr-idemitsu {
+            border-color: #D81436;
+          }
+
+          span {
+            opacity: 1;
+          }
+
+          img {
+            transform: scale(1.02);
+          }
+        }
+
+        img {
+          width: 100%;
+          box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16),
+            0 4px 6px rgba(0, 0, 0, 0.45);
+          border-radius: 40px;
+          transition: transform 0.5s ease;
+        }
+
+        span {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          display: flex;
+          align-items: flex-end;
+          height: 100%;
+          width: 100%;
+          padding: 2rem;
+          font-size: 3rem;
+          background: linear-gradient(
+            180deg,
+            rgba(0, 0, 0, 0) 0%,
+            rgba(0, 0, 0, 1) 100%
+          );
+          color: white;
+          border-radius: 0px 0px 30px 30px;
+          opacity: 0;
+          transition: opacity 0.3s ease;
+        }
       }
     }
   }
