--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -474,3 +474,121 @@ p {
     }
   }
 }
+
+.outro {
+  height: 1100vh;
+
+  &-background {
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    overflow: hidden;
+
+    &-video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+      display: block;
+    }
+
+    // &-blur {
+    //   position: absolute;
+    //   top: 0;
+    //   left: 0;
+    //   right: 0;
+    //   bottom: 0;
+    //   backdrop-filter: blur(10px);
+    //   /* Optional: add a tint or fade */
+    //   // background: rgba(0, 0, 0, 1);
+    //   background: black;
+    //   opacity: 1;
+    //   pointer-events: none;
+    // }
+
+    &-fadeLeft {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: linear-gradient(
+        270deg,
+        rgba(18, 18, 18, 0) 0%,
+        rgba(0, 0, 0, 1) 50%
+      );
+      background-repeat: no-repeat;
+      background-size: 0% 100%; // ← Starts with 0% width (invisible)
+      background-position: left top;
+      opacity: 1;
+      pointer-events: none;
+    }
+  }
+
+  &-content {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    //   background-color: linear-gradient(
+    //     270deg,
+    //     rgba(18, 18, 18, 0) 0%,
+    //     rgba(0, 0, 0, 1) 50%
+    //   );
+    //   background-repeat: no-repeat;
+    // background-size: 0% 100%; // ← Starts with 0% width (invisible)
+    // background-position: left top;
+    color: white;
+    // opacity: 0.5;
+    display: none;
+    grid-template-columns: repeat(12, 1fr);
+    column-gap: 30px;
+    padding: 10rem 0;
+    background-color: black ;
+
+    img {
+      width: 100%;
+      object-fit: cover;
+      border: 0 solid transparent;
+      transition: border-width 0.6s ease, border-color 0.3s ease 0.3s;
+
+      &:hover {
+        border-width: 0.5vw;
+        border-color: white;
+        transition: border-width 0.6s ease, border-color 0.3s ease;
+      }
+    }
+
+    &-left {
+      grid-column: 3 / span 4;
+
+      &-subtitle {
+        font-size: $text-lg;
+        margin: 6rem 0 3rem;
+        line-height: 1;
+      }
+
+      img {
+        margin-top: 10rem;
+      }
+    }
+
+    &-right {
+      grid-column: 7 / -1;
+      display: grid;
+      grid-template-columns: subgrid;
+      grid-template-rows: min-content;
+      row-gap: 30px;
+      padding-top: 30rem;
+
+      img:nth-child(1) {
+        grid-column: 1 / -1;
+        aspect-ratio: 8 / 7;
+      }
+      img:nth-child(2) {
+        grid-column: 1 / span 4;
+        grid-row: 2;
+      }
+    }
+  }
+}
