--- a/src/styles/font.scss
+++ b/src/styles/font.scss
@@ -24,3 +24,9 @@
   src: url("../assets/fonts/Display/MGPDisplay-Bold.otf");
   font-weight: 700;
 }
+
+@font-face {
+  font-family: "MotoGp Inline";
+  src: url("../assets/fonts/Inline/MGPInline-Bold.otf");
+  font-weight: 700;
+}
