--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,9 @@ $font-text: "MotoGp Text", system-ui, -apple-system, BlinkMacSystemFont,
 $font-display: "MotoGp Display", system-ui, -apple-system, BlinkMacSystemFont,
   "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
   sans-serif;
+$font-inline: "MotoGp Inline", system-ui, -apple-system, BlinkMacSystemFont,
+  "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+  sans-serif;
 $text-base: 2rem;
 $text-lg: 4rem;
 $text-xl: 5rem;
@@ -18,6 +21,27 @@ body {
   background-color: black;
   color: black;
   overflow-x: hidden;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999999;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+          padding: 3rem 4rem;
+
+  &-logo {
+        height: 3rem;
+  }
+
+   span {
+    font-size: 6rem;
+    cursor: pointer;
+   }
 }
 
 h1 {
@@ -48,7 +72,17 @@ p {
       background-size: cover;
       background-position: center;
       height: 100%;
-      transform: scale(1.2);
+      // transform: scale(1.2);
+      // animation: hero-fadeIn 0.5s ease forwards;
+    }
+
+    @keyframes hero-fadeIn {
+      0% {
+       transform: scale(1.3);
+      }
+      100% {
+       transform: scale(1.2);
+      }
     }
   }
 
@@ -397,40 +431,40 @@ p {
           transition: border-width 0.6s ease, border-color 0.3s ease;
 
           &.ducati {
-            border-color: #D10000;
+            border-color: #d10000;
           }
           &.gresini {
-            border-color: #B8C9F6;
+            border-color: #b8c9f6;
           }
           &.aprilia {
-            border-color: #4B247D;
+            border-color: #4b247d;
           }
           &.vr46 {
-            border-color: #DAFF0D;
+            border-color: #daff0d;
           }
           &.ktm {
-            border-color: #FD5A27;
+            border-color: #fd5a27;
           }
           &.lcr-castrol {
-            border-color: #08A25E;
+            border-color: #08a25e;
           }
           &.yamaha {
             border-color: #212449;
           }
           &.tech3 {
-            border-color: #D24702;
+            border-color: #d24702;
           }
           &.trackhouse {
-            border-color: #0B6EB7;
+            border-color: #0b6eb7;
           }
           &.pramac {
-            border-color: #7E47B4;
+            border-color: #7e47b4;
           }
           &.honda {
-            border-color: #ED0000;
+            border-color: #ed0000;
           }
           &.lcr-idemitsu {
-            border-color: #D81436;
+            border-color: #d81436;
           }
 
           span {
@@ -544,7 +578,7 @@ p {
     grid-template-columns: repeat(12, 1fr);
     column-gap: 30px;
     padding: 10rem 0;
-    background-color: black ;
+    background-color: black;
 
     img {
       width: 100%;
