--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,7 +27,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 999999;
+  z-index: 9;
   color: white;
   display: flex;
   justify-content: space-between;
@@ -58,6 +58,18 @@ p {
   height: 400vh;
   position: relative;
 
+  &-logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    width: 100%;
+
+    img {
+      width: 100%;
+    }
+  }
+
   &-banner {
     position: sticky;
     top: 0;
@@ -72,16 +84,11 @@ p {
       background-size: cover;
       background-position: center;
       height: 100%;
-      // transform: scale(1.2);
-      // animation: hero-fadeIn 0.5s ease forwards;
-    }
+      transform: scale(1.3);
 
-    @keyframes hero-fadeIn {
-      0% {
-        transform: scale(1.3);
-      }
-      100% {
+      &.zoomed-out {
         transform: scale(1.2);
+        transition: transform 2s ease;
       }
     }
   }
@@ -515,6 +522,7 @@ p {
   &-inner {
     display: flex;
     flex-direction: column;
+    gap: 3.75rem;
     position: sticky;
     top: 0;
     width: 100%;
@@ -529,21 +537,24 @@ p {
     text-align: center;
     color: white;
     z-index: 2;
+    padding: 0 12rem;
   }
 
   &-list {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    // gap: 1rem;
+    justify-content: space-between;
     position: relative;
-    left: 100%;
+    left: 100vw;
     height: 80%;
+    width: fit-content;
 
     &-row {
       display: flex;
       gap: 1rem;
       position: relative;
-      height: calc(100% / 3);
+      height: calc((100% - 2rem) / 3);
 
       &:nth-child(1) {
       }
@@ -554,18 +565,114 @@ p {
         left: 10rem;
       }
 
-      &-item {
-        display: flex;
+            &-item {
         position: relative;
+        // width: 26.25rem;
+        // aspect-ratio: 2 / 3;
+        display: flex;
+        overflow: hidden;
+        // border-radius: 40px;
+        // border: 0 solid transparent;
+        transition: border-width 0.6s ease, border-color 0.3s ease 0.3s;
+
+        &:hover {
+          // border-width: 0.5vw;
+          // border-color: black;
+          // transition: border-width 0.6s ease, border-color 0.3s ease;
+
+          // &.ducati {
+          //   border-color: #d10000;
+          // }
+          // &.gresini {
+          //   border-color: #b8c9f6;
+          // }
+          // &.aprilia {
+          //   border-color: #4b247d;
+          // }
+          // &.vr46 {
+          //   border-color: #daff0d;
+          // }
+          // &.ktm {
+          //   border-color: #fd5a27;
+          // }
+          // &.lcr-castrol {
+          //   border-color: #08a25e;
+          // }
+          // &.yamaha {
+          //   border-color: #212449;
+          // }
+          // &.tech3 {
+          //   border-color: #d24702;
+          // }
+          // &.trackhouse {
+          //   border-color: #0b6eb7;
+          // }
+          // &.pramac {
+          //   border-color: #7e47b4;
+          // }
+          // &.honda {
+          //   border-color: #ed0000;
+          // }
+          // &.lcr-idemitsu {
+          //   border-color: #d81436;
+          // }
+
+          span {
+            opacity: 1;
+          }
+
+          img {
+            transform: scale(1.02);
+          }
+        }
 
         img {
-          max-height: 100%; /* make images fit row height */
-          object-fit: contain;
+          // max-height: 100%; /* make images fit row height */
+          // object-fit: contain;
+          // box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16),
+          //   0 4px 6px rgba(0, 0, 0, 0.45);
+          // border-radius: 40px;
+          transition: transform 0.5s ease;
         }
+
         span {
           position: absolute;
+          bottom: 0;
+          left: 0;
+          display: flex;
+          align-items: flex-end;
+          height: 100%;
+          width: 100%;
+          padding: 1rem;  
+          font-size: 2rem;
+          background: linear-gradient(
+            180deg,
+            rgba(0, 0, 0, 0) 0%,
+            rgba(0, 0, 0, 1) 100%
+          );
+          color: white;
+          // border-radius: 0px 0px 30px 30px;
+          opacity: 0;
+          transition: opacity 0.3s ease;
         }
       }
+
+      // &-item {
+      //   display: flex;
+      //   position: relative;
+
+      //   img {
+      //     max-height: 100%; /* make images fit row height */
+      //     object-fit: contain;
+      //   }
+      //   span {
+      //     position: absolute;
+      //   }
+      // }
+
+      // &-item {
+        
+      // }
     }
   }
 }
